# apex-trace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apextrace/: __init__.py  corners.py  delta.py  lap.py  plots.py  report.py
apextrace/loaders/: __init__.py  fastf1_loader.py
examples/: check_corners.py  compare_laps.py  corner_report.py  hello_fastf1.py  plot_speed_trace.py  track_map.py  validate_alignment.py  validate_delta.py
tests/: conftest.py  test_corners.py  test_delta.py  test_lap.py  test_report.py
